# arrow

./: Dockerfile.miniApp  README.md  build-clean.sh  build.sh
.github/workflows/: cpp.yml  cpp_extra.yml  docs.yml  python.yml  ruby.yml
cpp/: meson.options
cpp/src/arrow/: meson.build
cpp/src/arrow/dataset/: file_parquet.h
cpp/src/arrow/util/: compression_snappy.cc  io_util.cc  io_util.h  key_value_metadata.cc
cpp/src/parquet/: CMakeLists.txt  column_reader.cc  column_reader.h  column_writer.cc  column_writer_test.cc  file_deserialize_test.cc  file_reader.cc  file_writer.cc  meson.build  metadata.cc  metadata.h  metadata_test.cc  parquet.thrift  properties.h  thrift_internal.h  types.cc  types.h  types_test.cc
cpp/src/parquet/arrow/: arrow_reader_writer_test.cc  reader.cc  writer.cc
cpp/src/parquet/encryption/: CMakeLists.txt  aes_encryption.cc  aes_encryption.h  aes_encryption_nossl.cc  aes_encryption_test.cc  column_chunk_properties.cc  column_chunk_properties.h  crypto_factory.cc  crypto_factory.h  crypto_factory_test.cc  decryptor_interface.h  dll_encryptor.cc  dll_encryptor.h  dll_encryptor_loader.cc  dll_encryptor_loader.h  encoding_properties.cc  encoding_properties.h  encoding_properties_test.cc  encryption.cc  encryption.h  encryption_external_test.cc  encryption_internal.cc  encryption_internal.h  encryption_utils.cc  encryptor_interface.h  external_dbpa_encryption.cc  external_dbpa_encryption.h  external_dbpa_encryption_integ_test.cc  external_dbpa_encryption_test.cc  external_dbpa_encryption_utils.h  internal_file_decryptor.cc  internal_file_decryptor.h  internal_file_encryptor.cc  internal_file_encryptor.h  key_toolkit_internal.cc  loadable_encryptor.h  loadable_encryptor_utils.cc  loadable_encryptor_utils.h  local_read_write_configs_test.cc  per_column_encryption_test.cc  (+3 more)
cpp/subprojects/: dbps_agent.wrap
cpp/subprojects/packagefiles/dbps_agent/: meson.build
python/pyarrow/: _parquet.pxd  _parquet.pyx  _parquet_encryption.pxd  _parquet_encryption.pyx
python/pyarrow/includes/: libparquet_encryption.pxd
python/pyarrow/parquet/: core.py  encryption.py
python/pyarrow/src/arrow/python/: parquet_encryption.cc  parquet_encryption.h
python/pyarrow/tests/parquet/: test_encryption_external.py  test_external_encryption.py
python/scripts/: base_app.py  baselining_app.py  debug_external_decryption.py  external_test.py  protegrity_benchmark_app.py  runs.sh  simple_external_decryption_test.py  tekdatum_mini_app.py  tekdatum_mini_app_with_decryption.py  tekdatum_test11.py  use_external_dbpa_encryption.py
